hphp/hack/test/typecheck/strict_switch/just_enum_class.php.new_exhaustivity.exp
WARN: File "just_enum_class.php", line 27, characters 10-31:
Invalid case: This case will never match.
A value of type `MixedEnumClass` can never be equal to a value of type `HH\MemberOf<MixedEnumClass, IntEnumCD>` (Warn[12007])
WARN: File "just_enum_class.php", line 60, characters 10-33:
Invalid case: This case will never match.
A value of type `HH\MemberOf<MixedEnumClass, string>` can never be equal to a value of type `HH\MemberOf<MixedEnumClass, int>` (Warn[12007])
ERROR: File "just_enum_class.php", line 59, characters 3-68:
This `switch` statement is nonexhaustive. At least the following cases are missing: `MixedEnumClass::LabelString1` (Typing[4019])
  File "just_enum_class.php", line 59, characters 11-12:
  The scrutinee has type `HH\MemberOf<MixedEnumClass, string>`.
ERROR: File "just_enum_class.php", line 77, characters 3-66:
This `switch` statement is nonexhaustive. At least the following cases are missing: `MixedEnumClass::LabelC` (Typing[4019])
  File "just_enum_class.php", line 77, characters 11-12:
  The scrutinee has type `HH\MemberOf<MixedEnumClass, (IntEnumAB | IntEnumCD)>`.
